# f1-data-engineering-project

./: .gitignore  README.md  databricks.yml  pyproject.toml
.github/workflows/: deploy-app.yml
Notebooks/Tutorials/: Ingest data from CSV file.ipynb
Notebooks/Version 1/: SetUp.ipynb  _working.ipynb
Notebooks/Version 1/Ingestion/: 1. Ingest Circuits File.ipynb  2. Ingest Races File.ipynb  3. Ingest Constructors File.ipynb  4. Ingest Drivers File.ipynb  5. Ingest Results File.ipynb  6. Ingest Pit Stops File.ipynb  7. Ingest Qualifying File.ipynb  8. Ingest Lap Times File.ipynb
app/: README.md  app.py  app.yaml
docs/source/: conf.py  index.rst
ergast_api/: seasons.ipynb
fixtures/: README.md
notebooks/: _SetUp.ipynb  config.ipynb  drop_all_tables.ipynb  utils.ipynb
notebooks/preproc/: 1. Ingest Circuits File.ipynb  2. Ingest Races File.ipynb  3. Ingest Constructors File.ipynb  4. Ingest Drivers File.ipynb  5. Ingest Results File.ipynb  6. Ingest Pit Stops File.ipynb  7. Ingest Qualifying File.ipynb  8. Ingest Lap Times File.ipynb
notebooks/proc/: 1. rescore_race_results.ipynb  rescore_race_results.ipynb  standings.ipynb
resources/: ingest.job.yml
